--- a/elegance/src/index.scss
+++ b/elegance/src/index.scss
@@ -4,3 +4,9 @@ body {
    margin: 0 auto;
    font-family: "Poppins", sans-serif;
 }
+
+@media(max-width: 767px){
+   body {
+      padding: 0 1rem;
+   }
+}
