--- a/elegance/src/index.scss
+++ b/elegance/src/index.scss
@@ -5,6 +5,39 @@ body {
    font-family: "Poppins", sans-serif;
 }
 
+a {
+   color: #1C1C1C;
+   text-decoration: none;
+}
+
+.container-nav {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding-top: 4rem;
+
+   .logo {
+      font-weight: bold;
+      font-size: 44px;
+      color:#F2A213;
+   }
+}
+
+.nav-links {
+   display: flex;
+   gap: 2.5rem;
+   li {
+      list-style: none;
+   }
+   .nav-link-item{
+      font-size: 18px;
+      font-weight: 600;
+      :hover{
+         color: #F2A213;
+      }
+   }
+}
+
 @media(max-width: 767px){
    body {
       padding: 0 1rem;
