--- a/elegance/src/index.scss
+++ b/elegance/src/index.scss
@@ -3,6 +3,7 @@ body {
    width: 100%;
    margin: 0 auto;
    font-family: "Poppins", sans-serif;
+   position: relative;
 }
 
 a {
@@ -10,19 +11,28 @@ a {
    text-decoration: none;
 }
 
+
 .container-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 4rem;
-
    .logo {
       font-weight: bold;
       font-size: 44px;
       color:#F2A213;
    }
+   .wrapper-nav {
+      display: flex;
+      align-items: center;
+      gap: 4rem;
+      .container-nav-action {
+         display: flex;
+         gap: 1.5rem;
+         align-items: center;
+      }
+   }
 }
-
 .nav-links {
    display: flex;
    gap: 2.5rem;
@@ -38,8 +48,59 @@ a {
    }
 }
 
-@media(max-width: 767px){
-   body {
-      padding: 0 1rem;
+.container-nav-mobile {
+   display: none;
+}
+
+@media(max-width: 767px) {
+   .container-nav {
+      display: none;
+   }
+   .container-nav-mobile {
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+      align-items: center;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      .logo {
+         font-weight: bold;
+         font-size: 2rem;
+         color:#F2A213;
+      }
+   }
+   .wrapper-nav-mobile {
+      background-color: #F2A213;
+      position: absolute;
+      width: 100vw;
+      height: 103vh;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .container-nav-link {
+         .nav-links {
+            flex-direction: column;
+            margin: 0;
+            padding: 0;
+            gap: 2rem;
+            .nav-link-item {
+               text-align: center;
+               font-size: 1.75rem;
+            }
+         }
+      }
+      .container-nav-action {
+         display: flex;
+         gap: 2rem;
+         margin-top: 2rem;
+      }
+   }
+   .close-menu-mobile {
+      z-index: 10;
+      position: absolute;
+      top: 2rem;
+      right: 1rem;
    }
 }
