Create Item Card Dropdown

--- a/elegance/src/components/CartDropdown/cart-dropdown.styles.scss
+++ b/elegance/src/components/CartDropdown/cart-dropdown.styles.scss
@@ -2,11 +2,13 @@
   position: absolute;
   right: 0;
   top: 150px;
-  height: 200px;
+  overflow-x: auto;
+  height: 450px;
   background-color: #FFF;
   border: 1px solid;
   padding: 1rem;
   .cart-dropdown-items-container {
     display: flex;
+    flex-direction: column;
   }
 }
