Create top header component

--- a/elegance/src/index.scss
+++ b/elegance/src/index.scss
@@ -1,8 +1,7 @@
 body {
-   max-width: 1280px;
    width: 100%;
    margin: 0 auto;
-   font-family: "Poppins", sans-serif;
+   font-family: "Montserrat", sans-serif;
    position: relative;
 }
 
